--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-pager-view": "^6.2.3",
     "react-native-webview": "^13.8.1"
   },
   "devDependencies": {
