--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "json-server": "^1.0.0-alpha.23",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.4",
