--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-pager-view": "^6.2.3",
-    "react-native-webview": "^13.8.1"
+    "react-native-webview": "^13.8.1",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
